Ensure headings are light in dark mode

--- a/static/src/scss/_content.scss
+++ b/static/src/scss/_content.scss
@@ -11,6 +11,10 @@ section.content {
       scroll-margin-top: var(--hero-height); // navbar height (ish)
       margin-right: 0.5rem;
     }
+
+    @include dark-mode {
+      color: $dark-mode-text;
+    }
   }
 }
 
